# beyond-segmentation

./: README.md  pyproject.toml  requirements.txt
data/: .gitignore  add_root.py  classes.py  crop.py  get_datasets.py  prepare_dataset.sh  split.py  to_yolo.py
metrics/: draw_boxes.py  svd.py  svd_mse.py
model/: .gitignore  config.py  data.yaml  infer.py  loss.py.patch  prepare_model.sh  train.py  val.py
