[project]
name = "beyond-segmentation"
version = "0.1.0"
description = "Structurally informed facade parsing from imperfect images using YOLOv8 with pairwise alignment regularization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.20.0",
    "fonttools==4.61.0",
    "fsspec==2025.12.0",
    "idna==3.11",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.7",
    "mpmath==1.3.0",
    "networkx==3.6",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.19.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.1.105",
    "opencv-python==3.4.18.65",
    "packaging==25.0",
    "pillow==12.0.0",
    "polars==1.35.2",
    "polars-runtime-32==1.35.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
]
